testing/tests/merge_ref/incompatible_optional_types.stderr
error: Type 'i32 cannot be merged into field of type 'String'.
 --> tests/merge_ref/incompatible_optional_types.rs:7:24
  |
7 |     pub normal: Option<i32>,
  |                        ^^^

error: Type 'Option < Option < i32 > > cannot be merged into field of type 'String'.
 --> tests/merge_ref/incompatible_optional_types.rs:8:19
  |
8 |     pub optional: Option<Option<i32>>,
  |                   ^^^^^^
